--- a/6-modal/setup/styles.css
+++ b/6-modal/setup/styles.css
@@ -212,7 +212,7 @@ Modal
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(73, 166, 233, 0.5);
+  background: rgba(221, 233, 243, 0.5);
   display: grid;
   place-items: center;
   transition: var(--transition);
@@ -234,6 +234,7 @@ Modal
   display: grid;
   place-items: center;
   position: relative;
+  min-height: 200px;
 }
 .close-btn {
   position: absolute;
